@@ -1,0 +1,6 @@
+<asx version = "3.0">
+  <entry>
+	<title>Council Video for 4/7/2009</title>
+   	<ref href = "mms://media1.fresno.gov/CouncilVideoArchive/20090407.wmv"/>
+  </entry>
+</asx>
